clean up all components, implement url mismatch

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,3 +67,10 @@ a.navbar-brand {
 .container-lg {
   --bs-gutter-x:1rem !important;
 }
+
+.globalObjectFit {
+    max-width:100%;
+    height:auto;
+}
+
+
