--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,34 +1,33 @@
 :root {
-  --nav-item-color: #86C232;
-  --nav-brand-color:#EDF5E1;
-  --page-background-color:#222629;
+  --nav-item-color: #86c232;
+  --nav-brand-color: #edf5e1;
+  --page-background-color: #222629;
 }
 
 .default-bg-color {
-  background-color: var(--page-background-color)
+  background-color: var(--page-background-color);
 }
 
 .navbar-expand-lg .navbar-nav a.nav-link {
-    padding: 15px 0px 0px 0px;
-    line-height: 1.2em;
+  padding: 15px 0px 0px 0px;
+  line-height: 1.2em;
 }
 
 .nav-item {
   .nav-link {
     color: var(--nav-item-color);
     font-weight: 300;
-    display:inline-block;
+    display: inline-block;
 
     &:hover {
-      color: var(--nav-brand-color)
+      color: var(--nav-brand-color);
     }
     &.show,
     &:focus {
-      color:var(--nav-item-color) !important;
+      color: var(--nav-item-color) !important;
     }
   }
 }
-
 
 a.navbar-brand {
   color: var(--nav-brand-color);
@@ -38,29 +37,27 @@ a.navbar-brand {
   }
 }
 
-
 .navbar-nav .dropdown-menu {
-  background:#474B4F;
-  
+  background: #474b4f;
+
   & .dropdown-item {
     color: var(--nav-item-color);
-    font-weight:300
+    font-weight: 300;
   }
 }
 
 .dropdown .dropdown-menu {
-  --bs-dropdown-link-hover-bg: #6B6E70;
+  --bs-dropdown-link-hover-bg: #6b6e70;
 }
 
 .container-lg {
-  --bs-gutter-x:1rem !important;
+  --bs-gutter-x: 1rem !important;
 }
 
 .globalObjectFit {
-    max-width:100%;
-    height:auto;
+  max-width: 100%;
+  height: auto;
 }
-
 
 @media (max-width: 1199px) {
   .responsiveHeader {
@@ -75,23 +72,46 @@ a.navbar-brand {
 }
 
 .defaultGreen {
-  color:#86C232;
+  color: #86c232 !important;
+}
+
+.defaultGreenBg {
+  background-color: #86c232 !important;
 }
 
 .section-heading::after {
-      background: #86C232;
-      bottom: -10px;
-      content: "";
-      display: block;
-      height: 5px;
-      position: relative;
-      width: 50px;
-      left: 50%;
-      margin-left: -25px;
+  background: #86c232;
+  bottom: -10px;
+  content: "";
+  display: block;
+  height: 5px;
+  position: relative;
+  width: 50px;
+  left: 50%;
+  margin-left: -25px;
 }
 
-.form-control:focus {
-  box-shadow: none !important;
-  outline:2px solid#00c1d9 !important;
-  border-color: transparent !important
+.section-heading {
+  text-align:center;
 }
+
+/* Will not apply to .special-form-control class */
+.form-control:not(.special-form-control):focus { 
+  box-shadow: none !important;
+  outline: 3px solid#00c1d9 !important;
+  border-color: transparent !important;
+}
+
+.special-form-control {
+  box-shadow: none !important;
+  border-color: transparent !important;
+}
+
+select option {
+  background:#222629;
+}
+
+.form-select {
+  --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e") !important;
+}
+
