rework and finalize about page, various fixes implemented on other pages

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -115,3 +115,11 @@ select option {
   --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e") !important;
 }
 
+.figure-caption .credit {
+  margin: 0;
+    padding: 0;
+    color: gray;
+    font-family: open sans,sans-serif;
+    font-size: .75rem;
+    line-height: 1.125;
+}
