--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background: linear-gradient(var(--page-background-color), rgba(0, 0, 0, 0.984)) !important;
+  background-color: #222629 !important;
 }
 
 .navbar-expand-lg .navbar-nav a.nav-link {
