--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -15,10 +15,6 @@
     transform: scale(1.1);
 }
 
-.footer-text {
-    font-size: 15px;
-}
-
 .footer hr {
   margin-bottom:0.5rem;
   margin-top:0px;
@@ -27,4 +23,20 @@
 .objectFit {
   max-width:20%;
   height:auto;
+}
+
+.rfs {
+  font-size: 2vw;
+}
+
+@media (max-width: 768px) {
+  .rfs {
+    font-size: 2.5vw;
+  }
+}
+
+@media (min-width: 992px) and (min-width: 1200px) {
+  .rfs {
+    font-size: 1.5vw;
+  }
 }
