--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -25,18 +25,15 @@
   height:auto;
 }
 
-.rfs {
-  font-size: 2vw;
-}
 
-@media (max-width: 768px) {
+@media (max-width: 850px) {
   .rfs {
-    font-size: 2.5vw;
+    font-size: 2.5vw
   }
 }
 
-@media (min-width: 992px) and (min-width: 1200px) {
+@media (min-width: 850px) { /*greater than 992px*/
   .rfs {
-    font-size: 1.5vw;
+    font-size: large
   }
 }
