navigation page fully updated, minor tweeks and patches

--- a/src/styles/Navigation.module.css
+++ b/src/styles/Navigation.module.css
@@ -1,5 +1,3 @@
-
-
 @keyframes tilt-shaking {
     0% { transform: rotate(0deg); }
     25% { transform: rotate(5deg); }
@@ -45,12 +43,11 @@
 
 }
 
-
 .playlist-icon  {
   transition: transform 200ms ease;
+  color:white;
 }
 
 .rotate {
   transform: rotate(180deg);
-  
 }
