--- a/src/styles/Careers.module.css
+++ b/src/styles/Careers.module.css
@@ -1,3 +1,19 @@
-.career-quote {
-    transform:translate(-50px, -75px)
+
+@media screen and (min-width: 992px) {
+    .career-quote {
+        transform:translate(-50px, -75px)
+    }
+    
 }
+
+.office-shift {
+    margin-bottom:2em;
+    margin-top:2em; 
+}
+
+@media screen and (min-width: 768px) {
+    .office-shift {
+            margin-bottom:5em;
+    }
+}
+
