--- a/src/styles/Careers.module.css
+++ b/src/styles/Careers.module.css
@@ -1,19 +1,28 @@
-
 @media screen and (min-width: 992px) {
-    .career-quote {
-        transform:translate(-50px, -75px)
-    }
-    
+  .career-quote {
+    transform: translate(-50px, -75px);
+  }
 }
 
 .office-shift {
-    margin-bottom:2em;
-    margin-top:2em; 
+  margin-bottom: 2em;
+  margin-top: 2em;
 }
 
 @media screen and (min-width: 768px) {
-    .office-shift {
-            margin-bottom:5em;
-    }
+  .office-shift {
+    margin-bottom: 5em;
+  }
 }
 
+.double-quote-left {
+  position: absolute;
+  left: 10px;
+  top: 85px;
+}
+
+.double-quote-right {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+}
