--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,7 @@ body {
   }
 }
 
+
 a.navbar-brand {
   color: var(--nav-brand-color);
 
@@ -127,4 +128,11 @@ select option {
 
 .text-wrap-balance {
   text-wrap:balance !important;
+}
+
+.default-button-size {
+  --bs-btn-padding-y: 1.15rem;
+  --bs-btn-padding-x: 1.2rem;
+  border-radius:10px;
+  letter-spacing:2px;
 }
