--- a/src/styles/Settings.module.css
+++ b/src/styles/Settings.module.css
@@ -1,10 +1,5 @@
 
 
-.tab:hover {
-    color:rgb(155, 250, 195) !important;
-
-
-}
 
 .underline .tab:focus {
    color:rgb(255, 255, 255) !important;
@@ -12,15 +7,26 @@
 }
 
 .tab-active {
-    color:rgb(155, 250, 195) !important;
+    color:#bafe3b !important;
     background-color:#2f3439 !important;
 }
 
-.form {
+.tab-active::after {
+        content: "";
+        height:  1.5rem;
+        left: calc( 0.5rem*-1);
+        position: absolute;
+        top: calc(50% - 12px);
+        width: 0.15rem;
+        background: #a0d147;
+
+}
+
+.form-shadow {
     background: transparent;
     border-radius: 10px;
     padding:2em;
-    box-shadow: 0px 5px 50px 0px rgba(0, 0, 0, 1);
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 1);
 }
 
 
@@ -32,10 +38,10 @@
 }
 
 .bg-color {
-    background-color:transparent ;
-    color:white;
+    background-color:transparent;
+    color:var(--nav-item-color);
     border-color:transparent !important;
-    border-radius:9999px !important;
+    border-radius:5px !important;
 }
 
 .bg-color:hover {
@@ -43,7 +49,41 @@
 }
 
 .form-select {
-    --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='black' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e") !important;
+    --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e") !important;
+    box-shadow: none !important;
   }
 
+.extra-padding {
+   padding: 0 30px 0 80px;
+}
+
+.switch-size {
+    height:23px;
+    width:45px !important;
+}
+
+
+.ph-color::placeholder {
+    color:white;
+}
+
+.light-border-input {
+    background-color:black !important;
+    color:white !important;
+     border-color:#333333 ;
+     outline: none !important
+}
+
+.light-border-input:focus {
+    border-color:rgb(119 116 116) !important
+}
+   
+.phone-dropdown {
+    color:white;
+    background-color: black !important;
+}
+
+.button-class {
+    background-color:black !important;
+}
 
