huge rework to nav and create playlist, various fixes, and typings added

--- a/src/styles/HeaderWithImageAndParagraph.module.css
+++ b/src/styles/HeaderWithImageAndParagraph.module.css
@@ -3,3 +3,11 @@
 }
 
 
+.section-container-style-red {
+    padding:5em;
+    background:#1d2426
+}
+
+.section-container-style-black {
+    padding:5em;
+}
