--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -214,3 +214,14 @@ textarea {
   right:17px !important
 }
 
+.react-datepicker__year-wrapper {
+  max-width: 204px !important;
+}
+
+.react-datepicker__tab-loop {
+  margin-left:0 !important
+}
+
+.input-group:has(.movieTitleInput:focus) .input-group-text{
+  border-color:rgb(119 116 116) !important;
+}
