Add responiveness and additional tweaks to create page, update home page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -226,3 +226,18 @@ textarea {
   border-color:rgb(119 116 116) !important;
 }
 
+.border-radius-infinite {
+  border-radius: 9999px;
+}
+
+.light-border-input {
+  background-color:black !important;
+  color:white !important;
+   border-color:#333333 ;
+   outline: none !important
+}
+
+.light-border-input:focus {
+  border-color:rgb(119 116 116) !important
+  
+}
