Update home page, add accordion faq, how to 3 step

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -240,3 +240,23 @@ textarea {
 .light-border-input:focus {
   border-color:rgb(119 116 116) !important
 }
+
+.home-page-accordion.accordion {
+  --bs-accordion-bg:#1d2426;
+  --bs-accordion-btn-color:white;
+  --bs-accordion-border-width:0;
+  --bs-accordion-color:white;
+  --bs-accordion-active-bg:#1d2426;
+  --bs-accordion-active-color: rgb(252, 238, 177);
+  --bs-accordion-btn-focus-border-color:transparent;
+  --bs-accordion-btn-focus-box-shadow:none;
+}
+
+.accordion-button {
+  padding:0px
+}
+
+.accordion-button:after {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
+
