--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -17,4 +17,32 @@
     }
   }
 
+  .step-grid {
+    display: grid;
+    gap: 32px;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+  }
+
+  @media screen and (max-width: 1200px) {
+    .step-grid {
+    gap: 54px;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
  
+
+
+  .arrow {
+    position: absolute;
+    bottom:11em;
+  }
+
+  .section-container-style-lighter {
+    padding:2em;
+    background:#1d2426
+}
+.accordion-item-home {
+  background-color:#1d2426;
+  border-radius:0
+}
