--- a/src/styles/HeaderWithImageAndParagraph.module.css
+++ b/src/styles/HeaderWithImageAndParagraph.module.css
@@ -1,13 +1,19 @@
 .default-font-size {
-    font-size: 32px;
+  font-size: 32px;
 }
 
-
 .section-container-style-lighter {
-    padding:2em;
-    background:#1d2426
+  padding: 2em;
+  background: #1d2426;
 }
 
 .section-container-style-black {
-    padding:2em;
+  padding: 2em;
+}
+/* so Learn More is stacked */
+@media only screen and (max-width: 931px) and (min-width: 768px),
+       only screen and (max-width: 505px) {
+  .wordSpacing {
+    word-spacing: 100vw;
+  }
 }
