Add password page, implement debounce to improve performance, refactor Button component, various changes and performance tweaks

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -9,8 +9,11 @@
 .button:hover {
     opacity: 90%;
 }
+
+
+
 @media (max-width: 1199px) {
     .button {
-        font-size: 12px; /* Set font size to 12px when screen width is less than 992px */
+        font-size: 12px; 
     }
 }
