--- a/src/styles/login-styles/StepEmail.module.css
+++ b/src/styles/login-styles/StepEmail.module.css
@@ -17,12 +17,13 @@
 .or {
     display:flex;
     align-items: center;
+    color: #afafafb1;
 }
 
 .or::before, .or::after {
     content: " ";
     display:block;
-    background: #AFAFAF;
+    background: #afafafaf;
     height: 1px;
     flex-grow: 1;
 }
@@ -34,14 +35,32 @@
 
 .button {
     display:flex;
-    padding:15px;
+    padding:12px;
     background-color:#95959529;
-    border-radius:10px; 
+    border-radius:8px; 
     border:none;
     color:white;
-    width:100%
+    width:100%;
 }
 
 .button:hover {
     opacity:90%
 }
+
+.button-icon {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.button-text {
+    letter-spacing: 1px;
+    align-self: center;
+    font-weight:300
+}
+
+.disclaimer {
+    font-weight: 300;
+    color: #6B6B6B;
+    font-size: 12px
+}
+
