--- a/src/styles/login-styles/login.css
+++ b/src/styles/login-styles/login.css
@@ -1,3 +1,22 @@
 button {
     font-size:16px !important;
 }
+
+
+.step-input {
+    background-color: black !important;
+    color: white !important;
+    border-color: #333333;
+    padding:15px;
+
+}
+
+.step-input:focus {
+    background-color: black;
+    border-color: white;
+
+}
+
+.step-input::placeholder {
+    color:rgba(255, 255, 255, 0.208)
+}
