huge rework to settings page

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,34 +1,19 @@
 .border { 
-  border: 2px solid white;
+  border: 2px solid rgb(208, 208, 208);
   width: 30px;
   height: 30px; 
   text-align: center;
   border-radius: 50px;
   line-height: 24px;
-  transition: transform 0.3s ease;
   margin:10px 10px;
   
 }
 
-.border:hover {
-    opacity: 80%;
-    transform: scale(1.1);
+
+.text {
+  margin-right:auto;
+  margin-left:auto;
+  text-align: center;
+  font-weight:300;
+  color:rgb(208, 208, 208);
 }
-
-.footer hr {
-  margin-bottom:0.5rem;
-  margin-top:0px;
-}
-
-.objectFit {
-  max-width:20%;
-  height:auto;
-}
-
-
-@media (max-width:500px) {
-  .rfs {
-    font-size: 3.5vw
-  }
-}
-
