--- a/src/styles/settings-styles/Billings.module.css
+++ b/src/styles/settings-styles/Billings.module.css
@@ -1,14 +1,109 @@
-.form-shadow {
-    background: transparent;
+.plan-container {
+    border: 1px solid hsla(0, 0%, 25%, 1);
     border-radius: 10px;
-    padding:2em;
-    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 1);
+    margin-bottom:1rem;
+
+}
+
+.summary-container {
+    display:flex;
+    border: 1px solid hsla(0, 0%, 25%, 1);
+    border-radius: 10px;
+    padding:1rem;
+    margin-bottom:1rem;
+}
+
+.plan-heading {
+    border-bottom: 1px solid hsla(0, 0%, 25%, 1);
+    padding:1rem;
+    display:flex;
+    align-items: center;
+    
+}
+
+.upgrade-button {
+    letter-spacing: normal;
+    font-weight: 300;
+    font-size:12px;
+}
+
+.compare-button {
+    letter-spacing: normal;
+    font-weight: 300;
+    font-size:12px;
+    margin-right:10px
+}
+
+.summary {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    border-right: 1px solid;
+    padding-right: 2rem;
+    align-items: center;
+}
+
+.more-options-container {
+    flex: 1;
+    padding-left: 2rem;
+}
+
+.options {
+    color: #0d6efd;
+    list-style: none;
+    padding: 0;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.web-title {
+    font-size: 14px;
+    margin-bottom: 3px;
+}
+
+.plan-subtext {
+    font-size: 12px;
+    color: #636c76;
+}
+
+.plan-list {
+    list-style: none;
+    padding-left: 0; /* Equivalent to ps-0 in Bootstrap */
+}
+
+.alt-plan {
+    color: #0d6efd;
+    padding-bottom: 15px;
 }
 
 
-
-.bg-transparent {
-    background-color: #1C1941;
-    border: #4B39EF solid 3px;
+.addOn-heading {
+    border-bottom: 1px solid hsla(0, 0%, 25%, 1);
+    padding:1rem;
+    display:flex;
+    align-items: center;
+    
 }
 
+.addOn-container {
+    border: 1px solid hsla(0, 0%, 25%, 1);
+    border-radius: 10px;
+    margin-bottom:1rem;
+
+}
+
+.addOn-title {
+    font-size: 14px;
+    margin-bottom: 3px;
+}
+
+.addOn-subtext {
+    font-size: 12px;
+    color: #636c76;
+}
+
+.addOn-button {
+    letter-spacing: normal;
+    font-weight: 300;
+    font-size:12px;
+}
