--- a/src/styles/settings-styles/Billings.module.css
+++ b/src/styles/settings-styles/Billings.module.css
@@ -25,13 +25,22 @@
     letter-spacing: normal;
     font-weight: 300;
     font-size:12px;
+    margin-left:10px;
+    align-self:flex-end;
 }
+
+@media screen and (max-width: 576px) {
+    .upgrade-button {
+        margin-top:10px
+    }
+}
+
 
 .compare-button {
     letter-spacing: normal;
     font-weight: 300;
     font-size:12px;
-    margin-right:10px
+    text-wrap: nowrap;
 }
 
 .summary {
@@ -79,6 +88,7 @@
 .web-title {
     font-size: 14px;
     margin-bottom: 3px;
+    text-wrap: nowrap;
 }
 
 .plan-subtext {
