--- a/src/styles/HeaderWithImageAndParagraph.module.css
+++ b/src/styles/HeaderWithImageAndParagraph.module.css
@@ -3,12 +3,15 @@
 }
 
 .section-container-style-lighter {
-  padding: 2em;
+  padding-left: 2em;
+  padding-right: 2em;
+
   background: #1d2426;
 }
 
 .section-container-style-black {
-  padding: 2em;
+  padding-left: 2em;
+  padding-right: 2em;
 }
 /* so Learn More is stacked */
 @media only screen and (max-width: 931px) and (min-width: 768px),
